# backend/src/odyssey/api/router.py
@@ -2,7 +2,9 @@
 
 from fastapi import APIRouter
 
+from odyssey.api.captures import router as captures_router
 from odyssey.api.system import router as system_router
 
 router = APIRouter()
 router.include_router(system_router)
+router.include_router(captures_router)
